Extend configuration file.

--- a/raspberry-bushcam.conf
+++ b/raspberry-bushcam.conf
@@ -1,14 +1,21 @@
 # Configuration file for the Rpi-wlcam script.
+# Set GPIO pin mode. Set false for BOARD mode.
+bcm_mode = True
 
+# Plug in your PIR sensor to this pin
 pir_pin = 17
+# Plug in your DHT11 or DHT22 sensor into this pin
 dht_pin = 18
 
+# Set some camera settings.
+# Unclear whether the framerate setting has any effect.
+cam_led_enable = True
 frame_rate = 25
 resolution = (1280, 720)
 rec_time = 15
 
-# Percentage of disk free which will stop recording.
+# Stop recording when disk space falls to this percentage:
 diskspace_limit = 15
 
-h264filename_base = "rpi-wlcamh264"
-mp4filename_base = "rpi-wlcam_"
+h264filename_base = "raspberry-bushcam_h264"
+mp4filename_base = "raspberry-bushcam"
