Update conf file to new project name.

--- a/raspberry-bushcam.conf
+++ b/raspberry-bushcam.conf
@@ -1,4 +1,4 @@
-# Configuration file for the Rpi-wlcam script.
+# Configuration file for the Raspberry-Bushcam script.
 # Set GPIO pin mode. Set false for BOARD mode.
 bcm_mode = True
 
