Remove cludgy wrapper for dht sensors in favor of Adafruit_DHT library

--- a/raspberry-bushcam.conf
+++ b/raspberry-bushcam.conf
@@ -4,6 +4,8 @@ bcm_mode = True
 
 # Plug in your PIR sensor to this pin
 pir_pin = 17
+# For DHT11 use '11', DHT22 use '22', AM2302 use '2302'
+dht_type = 11
 # Plug in your DHT11 or DHT22 sensor into this pin
 dht_pin = 18
 
@@ -12,7 +14,7 @@ dht_pin = 18
 cam_led_enable = True
 frame_rate = 25
 resolution = (1280, 720)
-rec_time = 15
+rec_time = 10
 
 # Stop recording when disk space falls to this percentage:
 diskspace_limit = 15
