Add mysql support for data from the DHT sensor

--- a/raspberry-bushcam.conf
+++ b/raspberry-bushcam.conf
@@ -21,3 +21,14 @@ diskspace_limit = 15
 
 h264filename_base = "raspberry-bushcam_h264"
 mp4filename_base = "raspberry-bushcam"
+
+# Enable mysql integration?
+mysql_enable = True
+# Mysql server hostname or IP address
+mysql_host = "localhost"
+# Mysql username
+mysql_user = "test"
+# Mysql password
+mysql_pw = "test"
+# Name of mysql database to use (make sure it exists with corresponding tables)
+mysql_db = "test"
