Clean up configuration

--- a/raspberry-bushcam.conf
+++ b/raspberry-bushcam.conf
@@ -14,13 +14,13 @@ dht_pin = 18
 cam_led_enable = True
 frame_rate = 25
 resolution = (1280, 720)
-rec_time = 1
+rec_time = 10
 
-# Stop recording when disk space falls to this percentage:
+# Stop recording when free disk space falls to this percentage:
 diskspace_limit = 15
 
 h264filename_base = "rbc_h264"
-mp4filename_base = "rb-bushcam"
+mp4filename_base = "rbc"
 
 # Enable mysql integration?
 mysql_enable = True
